--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
       "homepage": "https://bemobile.tech"
     }
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "autoload": {
     "psr-4": {
       "Echevarria\\Bitly\\": "src/"
