generate stable version

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
       "homepage": "https://bemobile.tech"
     }
   ],
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true,
   "autoload": {
     "psr-4": {
